Refactoring and formatting

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-SERVER_PORT=8999
+SERVER_PORT=9009
 SERVER_HOST=
 SERVER_HOST_URL=http://localhost
 WEB3_HTTP_PROVIDER=https://bsc-dataseed1.binance.org:443
+WEB3_CHAIN_ID=56
+DECIMALS_FOR_DISPLAY=8
 
