--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,9 @@ jobs:
           name: "Copy env"
           command: scp -r -r ./.env ubuntu@ec2-54-245-147-217.us-west-2.compute.amazonaws.com:bscapi/
       - run:
+          name: "Copy babel"
+          command: scp -r -r ./.babelrc ubuntu@ec2-54-245-147-217.us-west-2.compute.amazonaws.com:bscapi/
+      - run:
           name: "Update NPM on server"
           command: ssh ubuntu@ec2-54-245-147-217.us-west-2.compute.amazonaws.com 'cd ./bscapi && npm install'
       - run:
