--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js + Express application",
   "main": "index.js",
   "scripts": {
-    "start": "export NODE_ENV=mainnet && nodemon -w src --exec \"babel-node -r dotenv/config src/app.js\"",
+    "start": "nodemon -w src --exec \"babel-node -r dotenv/config src/app.js\"",
     "start-prod": "rm -rf build/* && babel -d ./build ./src && mkdir build/public && NODE_ENV=mainnet NODE_CONFIG_DIR=./build/config/ node ./build/app.js",
     "build": "babel -d ./build ./src",
     "prebuild": "rm -rf build/*",
