--- a/.env.mainnet
+++ b/.env.mainnet
@@ -4,3 +4,4 @@ SERVER_HOST_URL=http://localhost
 WEB3_HTTP_PROVIDER=https://bsc-dataseed1.binance.org:443
 WEB3_CHAIN_ID=56
 DECIMALS_FOR_DISPLAY=8
+MULTI_CALL_ADDRESS=0x1ee38d535d541c55c9dae27b12edf090c608e6fb
