--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-express",
   "version": "1.0.0",
-  "description": "Node.js + Express application",
+  "description": "BSC api",
   "main": "index.js",
   "scripts": {
     "start": "export NODE_ENV=mainnet && nodemon -w src --exec \"babel-node -r dotenv/config src/app.js\"",
@@ -13,30 +13,16 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
-    "big.js": "^5.2.2",
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
-    "config": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "electron": "^9.0.0",
-    "ethereumjs-tx": "^2.1.2",
-    "ethers": "^4.0.47",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
-    "got": "^11.2.0",
     "helmet": "^3.21.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
-    "qs": "^6.9.1",
-    "request-promise": "^4.2.5",
-    "secp256k1": "^4.0.1",
-    "serverless-http": "^2.5.0",
-    "serverless-import-swagger": "^0.2.2",
-    "serverless-openapi3-plugin": "^0.1.3",
     "wallet-address-validator": "^0.2.4",
-    "web3": "^1.2.4"
+    "web3": "^1.3.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -57,17 +43,6 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-security": "^1.4.0",
-    "jest": "^25.1.0",
-    "nodemon": "^1.19.1",
-    "serverless-bundle": "^1.2.5",
-    "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3",
-    "swagger-parser": "^9.0.1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "nodemon": "^1.19.1"
   }
 }
