--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "got": "^11.8.1",
     "helmet": "^3.21.3",
     "morgan": "^1.9.1",
     "wallet-address-validator": "^0.2.4",
