Cache hours to config

--- a/.env.mainnet
+++ b/.env.mainnet
@@ -6,3 +6,4 @@ DECIMALS_FOR_DISPLAY=8
 DECIMALS_DEFAULT=18
 MULTI_CALL_ADDRESS=0x1ee38d535d541c55c9dae27b12edf090c608e6fb
 PANCAKE_SWAP_TOKEN_ENDPOINT=https://api.pancakeswap.com/api/v1/stat
+PANCAKE_SWAP_TOKEN_CACHE_HOURS=1
